<resources>
    <string name="app_name">PizzaPhone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="pizza_phone">Pizza Phone</string>
    <string name="hello_explore_your_dream_pizza">Hello Explore your dream pizza</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="home">Accueil</string>
    <string name="favourite">Mes Commandes</string>
    <string name="daily_pizza">Pizza du jour</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">Ma Carte</string>
    <string name="pizzaphone">PizzaPhone</string>
    <string name="pizzaphone_gmail_com">pizzaphone@gmail.com</string>
    <string name="log_out">Log out</string>
    <string name="cherche_ton_pizza">Cherche ton Pizza !</string>
    <string name="username">Nom utilisateur</string>
    <string name="connexion">Connexion</string>
    <string name="LoginPage">Authentification</string>
    <string name="nom_de_la_pizza">Nom de la Pizza</string>
    <string name="price">Prix</string>
    <string name="ingredient">Ingrédients </string>
</resources>