<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="upjv.jeanmichel.pizzaphone.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_daily_pizza"
        android:name="upjv.jeanmichel.pizzaphone.ui.gallery.DailyPizzaFragment"
        android:label="@string/daily_pizza"
        tools:layout="@layout/daily_pizza_fragment" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="upjv.jeanmichel.pizzaphone.ui.slideshow.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/favourite_fragment" />
    <fragment
        android:id="@+id/nav_my_cart"
        android:name="upjv.jeanmichel.pizzaphone.ui.MyCartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_my_cart" />
</navigation>